Check system architecture before installing busybox, hide "stop aireplay" button in toolbar, improve watchdog, improve logging and bug report, code cleanup

--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -21,7 +21,7 @@
     <item android:id="@+id/stop_aireplay"
         android:title="@string/stop_aireplay"
         android:icon="@drawable/stop_aireplay"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
 
     <item android:id="@+id/export"
           android:title="@string/export_title"
