--- a/app/src/main/res/layout/custom_action_manager.xml
+++ b/app/src/main/res/layout/custom_action_manager.xml
@@ -13,9 +13,8 @@
         app:srcCompat="@android:drawable/ic_menu_add"
         android:id="@+id/floatingActionButton"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="30dp"
-        />
+        android:layout_alignParentEnd="true"
+        android:layout_margin="30dp" />
 
     <ListView
         android:layout_width="match_parent"
