Fix refresh_thread to avoid NPE on fifo, create onCountsChanges to update UI counters for APs and STs and remove thread from StatsDialog, fix SettingsFragment OutOfBoundsException, add check for tools installation according to system architecture (included tools work for armv7l and aarch64), add option to use external tools and enable prefix editing option

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,6 +7,16 @@
             android:title="@string/startup_title"
             android:key="airOnStartup" />
         <EditTextPreference
+            android:defaultValue="@string/prefix"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="@string/prefix_title"
+            android:key="prefix"
+            android:enabled="false"
+            android:summary="@string/prefix_sum"
+            android:dialogMessage="@string/prefix_desc"
+            android:dialogTitle="@string/prefix_title" />
+        <EditTextPreference
             android:defaultValue="@string/cap_dir"
             android:selectAllOnFocus="true"
             android:singleLine="true"
