--- a/app/src/main/res/layout/file_explorer.xml
+++ b/app/src/main/res/layout/file_explorer.xml
@@ -19,7 +19,7 @@
             app:srcCompat="@drawable/back"
             android:id="@+id/backButton"
             style="@android:style/Widget.Material.Button.Borderless"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentStart="true"/>
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
             app:srcCompat="@drawable/save"
             android:id="@+id/saveButton"
             style="@android:style/Widget.Material.Button.Borderless"
-            android:layout_toLeftOf="@+id/newFolderButton"/>
+            android:layout_toStartOf="@+id/newFolderButton"/>
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -36,11 +36,21 @@
             android:id="@+id/newFolderButton"
             style="@android:style/Widget.Material.Button.Borderless"
             android:layout_alignParentEnd="true"/>
+
     </RelativeLayout>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/currentDir"
+        android:layout_below="@+id/rl_1"
+        android:textColor="?android:attr/textColorPrimary"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/explorer_listview"
-        android:layout_below="@+id/rl_1"/>
+        android:layout_below="@+id/currentDir"/>
+
 </RelativeLayout>
