--- a/app/src/main/res/layout/export.xml
+++ b/app/src/main/res/layout/export.xml
@@ -15,15 +15,31 @@
         android:paddingEnd="8dp"
         android:paddingStart="8dp"/>
 
-    <EditText
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/output_file_hint"
-        android:ems="10"
-        android:id="@+id/output_file"
-        android:inputType="text"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"/>
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/output_file_hint"
+            android:ems="10"
+            android:id="@+id/output_file"
+            android:inputType="text"
+            android:paddingEnd="8dp"
+            android:paddingStart="8dp"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"/>
+
+        <Button
+            style="?android:attr/buttonBarButtonStyle"
+            android:text="..."
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/export_fe_btn"
+            android:layout_gravity="center_vertical"/>
+    </LinearLayout>
 
     <RadioGroup
         android:layout_width="match_parent"
