Code improvements in FileExplorer and RootFile, implement FileExplorer in settings

--- a/app/src/main/res/layout/mdk_fragment.xml
+++ b/app/src/main/res/layout/mdk_fragment.xml
@@ -104,7 +104,7 @@
                 android:inputType="text"
                 android:layout_width="0dp"
                 android:layout_gravity="center_vertical"
-                android:hint="/sdcard/list.txt"
+                android:hint="@string/optional"
                 android:layout_weight="1"/>
 
             <Button
